Implemented OP_IfNot

--- a/src/mlir/lib/Standalone/CMakeLists.txt
+++ b/src/mlir/lib/Standalone/CMakeLists.txt
@@ -48,6 +48,7 @@ set(LOWERING_FILES
     Lowering/SeekRowidLowering.cpp
     Lowering/SequenceLowering.cpp
     Lowering/IfNotZeroLowering.cpp
+    Lowering/IfNotLowering.cpp
     Lowering/LastLowering.cpp
     Lowering/IdxCompareLowering.cpp
     Lowering/DeleteLowering.cpp
