Added support for Intel VTune and LLVM X-Ray in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,47 @@ cmake_minimum_required(VERSION 3.15)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+if ("${XRAY}" STREQUAL "")
+    set(XRAY OFF)
+else ()
+    set(XRAY "${XRAY}")
+endif ()
+
+if ("${VTUNE}" STREQUAL "")
+    set(VTUNE OFF)
+else ()
+    message("VTune: ${VTUNE}")
+    set(VTUNE "${VTUNE}")
+endif ()
+
+if (VTUNE)
+    link_libraries(${PROJECT_SOURCE_DIR}/libittnotify.a)
+endif ()
+
+if (XRAY)
+    set(XRAY_THRESHOLD "25")
+    set(XRAY_OPTIONS "-fxray-instrument -fxray-instruction-threshold ${XRAY_THRESHOLD}")
+    message("LLVM X-Ray enabled!")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${XRAY_OPTIONS}")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${XRAY_OPTIONS}")
+endif ()
+
 if (CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
     message("Release build")
     add_compile_definitions(LLVMSQLITE_RELEASE)
-else()
+else ()
     message("Debug build")
     add_compile_definitions(LLVMSQLITE_DEBUG)
-endif()
+endif ()
 
 if (APPLE)
     message("Debug machine")
     add_compile_definitions(DEBUG_MACHINE)
-endif()
+endif ()
+
+if (VTUNE)
+    add_compile_definitions(VTUNE)
+endif ()
 
 set(SANITIZE OFF)
 if (SANITIZE)
@@ -30,13 +59,13 @@ if (SANITIZE)
     if (sanitize STREQUAL "address")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
-    elseif(sanitize STREQUAL "memory")
+    elseif (sanitize STREQUAL "memory")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize-memory-track-origins")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize-memory-track-origins")
-    endif()
-endif()
+    endif ()
+endif ()
 
-find_package (Threads)
+find_package(Threads)
 
 include_directories(${PROJECT_SOURCE_DIR})
 include_directories(${PROJECT_SOURCE_DIR}/src)
