Improved CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,20 +4,16 @@ cmake_minimum_required(VERSION 3.15)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-if ("${XRAY}" STREQUAL "")
-    set(XRAY OFF)
-else ()
-    set(XRAY "${XRAY}")
-endif ()
-
-if ("${VTUNE}" STREQUAL "")
-    set(VTUNE OFF)
-else ()
-    message("VTune: ${VTUNE}")
-    set(VTUNE "${VTUNE}")
-endif ()
+option(XRAY "Enable support for LLVM X-Ray")
+option(VTUNE "Enable support for profiling with VTune")
+option(SANITIZE "Enable support for a sanitizer (undefined address memory thread)")
 
 if (VTUNE)
+    if (${CMAKE_BUILD_TYPE} STREQUAL "Release")
+        message("Replacing build type 'Release' with 'RelWithDebInfo'")
+        set(CMAKE_BUILD_TYPE "RelWithDebInfo")
+    endif ()
+    message("VTune Enabled")
     link_libraries(${PROJECT_SOURCE_DIR}/libittnotify.a)
 endif ()
 
@@ -29,7 +25,7 @@ if (XRAY)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${XRAY_OPTIONS}")
 endif ()
 
-if (CMAKE_BUILD_TYPE STREQUAL "Release" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
+if (${CMAKE_BUILD_TYPE} STREQUAL "Release" OR ${CMAKE_BUILD_TYPE} STREQUAL "RelWithDebInfo")
     message("Release build")
     add_compile_definitions(LLVMSQLITE_RELEASE)
 else ()
@@ -46,11 +42,8 @@ if (VTUNE)
     add_compile_definitions(VTUNE)
 endif ()
 
-set(SANITIZE OFF)
 if (SANITIZE)
-    # Possible sanitize values: undefined address memory thread
     set(sanitize "undefined")
-
     message("Sanitizer: '${sanitize}'")
 
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=${sanitize} -fno-omit-frame-pointer -g")
