Updated CMakeLists.txt once again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,15 +43,15 @@ if (VTUNE)
 endif ()
 
 if (SANITIZE)
-    message("Sanitizer: '${sanitize}'")
+    message("Sanitizer: '${SANITIZE}'")
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=${sanitize} -fno-omit-frame-pointer -g")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=${sanitize} -fno-omit-frame-pointer -g")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=${SANITIZE} -fno-omit-frame-pointer -g")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=${SANITIZE} -fno-omit-frame-pointer -g")
 
-    if (sanitize STREQUAL "address")
+    if (SANITIZE STREQUAL "address")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
-    elseif (sanitize STREQUAL "memory")
+    elseif (SANITIZE STREQUAL "memory")
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize-memory-track-origins")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize-memory-track-origins")
     endif ()
