--- a/Makefile.in
+++ b/Makefile.in
@@ -37,7 +37,7 @@ TCC += -I${TOP}/ext/userauth
 # Define this for the autoconf-based build, so that the code knows it can
 # include the generated config.h
 #
-TCC += -D_HAVE_SQLITE_CONFIG_H -DBUILD_sqlite
+TCC += -D_HAVE_SQLITE_CONFIG_H -DBUILD_sqlite -DSQLITE_OMIT_VIRTUALTABLE
 
 # Define -DNDEBUG to compile without debugging (i.e., for production usage)
 # Omitting the define will cause extra debugging code to be inserted and
