--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,11 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
 option(XRAY "Enable support for LLVM X-Ray")
 option(VTUNE "Enable support for profiling with VTune")
 option(SANITIZE "Enable support for a sanitizer (undefined address memory thread)")
+option(CLANG11 "Path to the version of Clang that corresponds to the MLIR framework")
+
+if ("{CLANG11}" STREQUAL "OFF")
+    message(FATAL_ERROR "Please define the path to Clang 11 with -DCLANG11=...")
+endif()
 
 if (VTUNE)
     if ("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
@@ -189,6 +194,7 @@ add_library(sqlite
 )
 target_compile_definitions(sqlite PRIVATE VDBE_EXEC_NAME=sqlite3VdbeExecDefault)
 
+# Dummy library to use the sqlite3.c auto-generated file
 add_library(sqlite3_aggregate sqlite3.c)
 
 # shell_jit only executes statements using the JIT compiler.
@@ -216,7 +222,6 @@ target_link_libraries(profilable_shell ${CMAKE_DL_LIBS})
 
 # Target to build sqlite3.ll, used by JIT inlining features
 # It's built as a library (and not a custom target) to allow easy use of compile definitions
-set(CLANG11 "/Users/kowalski/Downloads/llvm-project/clangbuild/bin/clang")
 add_custom_command(
     OUTPUT sqlite3.ll
     VERBATIM COMMAND ${CLANG11} ${CMAKE_C_FLAGS} -S -emit-llvm ${PROJECT_SOURCE_DIR}/sqlite3.c -o sqlite3.ll
