Fixed issues with cached VDBEs and not found symbols

--- a/src/mlir/thomas/CMakeLists.txt
+++ b/src/mlir/thomas/CMakeLists.txt
@@ -32,6 +32,7 @@ add_library(sqlite_llvm
     ModuleOptimisation.cpp
     BridgeUtils.cpp
     ModuleWriter.cpp
+    DynamicLibrary.cpp
 )
 llvm_update_compile_flags(sqlite_llvm)
 target_link_libraries(sqlite_llvm PRIVATE ${LIBS})
